tests/paczka1/fuzzy1/15440418.err
Error in line 2: 3QVe S642 29,2
Error in line 4: 1NhIjcpLNv S642 12,4
Error in line 15: 3QVe A252 94,6
Error in line 19: 1NhIjcpLNv S642 71,6
Error in line 37: A93` A252 19,6
Error in line 23: 3QVe A930 88,0
